--- a/src/css/conduit-fill.css
+++ b/src/css/conduit-fill.css
@@ -64,7 +64,7 @@ input[type="color"].color-swatch::-moz-color-swatch            { border: none; b
 .visualizer-container {
   width:  180px;
   height: 180px;
-  margin: 24px auto;
+  margin: 20px auto;
 }
 
 #conduit-svg {
